bug- removed extra horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ body {
 }
 
 .main .adv-img {
-  width: 100vw;
+  width: 100%;
   max-height: 250px;
 }
 
